# project-guetta

./: CMakeLists.txt  GLWidget.cpp  GLWidget.h  GraphManager.cpp  GraphManager.h  Guetta.cpp  Guetta.h  Guetta.ui  GuettaCapture.cpp  GuettaCapture.ui  GuettaCloud.cpp  GuettaCloud.h  GuettaFeatures.cpp  GuettaFeatures.h  GuettaICP.cpp  GuettaICP.h  GuettaKeyPoint.h  GuettaTime.h  GuettaViewer.h  GuettaViewer.ui  Node.cpp  Node.h  ProjectHome.md  README.md  RGB.h  Ramsac.cpp  Ramsac.h  SiftGPUFeatureDetector.cpp  SiftGPUFeatureDetector.h  StandardCamera.cpp  StandardCamera.h  Tetrahedron.cpp  Tetrahedron.h  Viewer.cpp  Viewer.h  main.cpp  moc_GLWidget.cpp  moc_GLWidget.cxx  moc_Guetta.cxx  moc_GuettaCapture.cxx  (+10 more)
aislib/graph/: posegraph2d.d  posegraph3d.d
aislib/graph_optimizer/: graph_optimizer2d_aux.d
aislib/graph_optimizer_hogman/: Makefile  csparse_helper.d  hogman3d.d
aislib/graph_viewer/: graph_viewer.d  matrix4x4.d  moc_main_widget.cpp  qgl_graph_viewer.d  vector4.d  vrml_output.d
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  qt-Debug.pro  qt-Release.pro
siftgpu/src/SiftGPU/: SiftGPU.cpp  SiftMatch.cpp
trunk/: CMakeCache.txt  CMakeLists.txt  GraphManager.cpp  GraphManager.h  Guetta.cpp  Guetta.h  Guetta.ui  GuettaCapture.cpp  GuettaCapture.h  GuettaCapture.ui  GuettaCloud.cpp  GuettaCloud.h  GuettaFeatures.cpp  GuettaFeatures.h  GuettaGrabber  GuettaICP.cpp  GuettaKeyPoint.h  GuettaTime.cpp  GuettaViewer.cpp  Makefile  Matriz.h  RGB.h  Ramsac.cpp  Ramsac.h  Viewer  Viewer.cpp  Viewer.h  cmake_install.cmake  main.cpp  moc_Guetta.cxx  moc_GuettaViewer.cxx  moc_Viewer.cxx  newForm.cpp  screenshot-1316628206.cam  ui_Guetta.h  ui_GuettaViewer.h  ui_newForm.h
trunk/TestProyects/Daniel01/: CMakeCache.txt  CMakeLists.txt  Makefile  Matriz.h  ProjectGuetta  ProjectGuetta.cpp  ProyectGuetta.cpp  RGB.h  cmake_install.cmake  openni_grabber
trunk/TestProyects/Daniel01/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
trunk/aislib/graph/: loadEdges3d.d  posegraph3d.h
trunk/aislib/graph_optimizer_hogman/: hogman2d.d
trunk/aislib/graph_viewer/: main_widget.d  pose_graph_vis3d.d  primitives.d
trunk/aislib/hogman_interactive/: hogman_online.d  hogman_slam_interface.d
trunk/aislib/math/: quaternion.h  transformation.h
trunk/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml  qt-Debug.mk  qt-Debug.pro  qt-Release.pro
trunk/siftgpu/linux/: makefile
